--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -13,6 +13,7 @@ ext{
     final MOCKITO_VERSION = '2.13.0'
 
     final SUPPORT_VERSION = '26.1.0'
+    final CONSTRAINT_LAYOUT_VERSION = '1.0.2'
 
     final GSON_VERSION = '2.3.0'
     final RETROFIT_VERSION = '2.3.0'
@@ -20,6 +21,9 @@ ext{
     final RX_ANDROID_VERSION = '2.0.1'
     final RX_JAVA_VERSION = '2.1.7'
     final RX_JAVA_ADAPTER_VERSION = '2.3.0'
+    final LOGGING_INTERCEPTOR_VERSION = '2.0.4'
+    final BUTTERKNIFE_VERSION = '8.4.0'
+    final GLIDE_VERSION = '3.8.0'
 
     //Packages
     final JUNIT_PACKAGE = 'junit'
@@ -28,9 +32,13 @@ ext{
     final MOCKITO_PACKAGE = 'org.mockito'
 
     final SUPPORT_PACKAGE = 'com.android.support'
+    final SUPPORT_CONSTRAINT_PACKAGE = 'com.android.support.constraint'
     final RETROFIT_PACKAGE = 'com.squareup.retrofit2'
     final RX_PACKAGE = 'io.reactivex.rxjava2'
     final OK_HTTP_PACKAGE = 'com.squareup.okhttp3'
+    final LOGGING_INTERCEPTOR_PACKAGE  = 'com.github.ihsanbal'
+    final BUTTERKNIFE_PACKAGE = 'com.jakewharton'
+    final GLIDE_PACKAGE = 'com.github.bumptech.glide'
 
     //Libraries
     libraries = [
@@ -39,6 +47,7 @@ ext{
             appcompat : buildDependency(SUPPORT_PACKAGE, 'appcompat-v7', SUPPORT_VERSION),
             recyclerview : buildDependency(SUPPORT_PACKAGE, 'recyclerview-v7', SUPPORT_VERSION),
             supportv4 : buildDependency(SUPPORT_PACKAGE, 'support-v4', SUPPORT_VERSION),
+            constraintlayout : buildDependency(SUPPORT_CONSTRAINT_PACKAGE, 'constraint-layout', CONSTRAINT_LAYOUT_VERSION),
 
             gsonconverter : buildDependency(RETROFIT_PACKAGE, 'converter-gson', GSON_VERSION),
             retrofit : buildDependency(RETROFIT_PACKAGE, 'retrofit', RETROFIT_VERSION),
@@ -47,6 +56,12 @@ ext{
             rxandroid : buildDependency(RX_PACKAGE, 'rxandroid', RX_ANDROID_VERSION),
             rxjava : buildDependency(RX_PACKAGE, 'rxjava', RX_JAVA_VERSION),
             rxjavaadapter : buildDependency(RETROFIT_PACKAGE, 'adapter-rxjava2', RX_JAVA_ADAPTER_VERSION),
+            logginginterceptor : buildDependency(LOGGING_INTERCEPTOR_PACKAGE, 'LoggingInterceptor', LOGGING_INTERCEPTOR_VERSION),
+
+            butterknife : buildDependency(BUTTERKNIFE_PACKAGE, 'butterknife', BUTTERKNIFE_VERSION),
+            butterknifecompiler : buildDependency(BUTTERKNIFE_PACKAGE, 'butterknife-compiler', BUTTERKNIFE_VERSION),
+
+            glide : buildDependency(GLIDE_PACKAGE, 'glide', GLIDE_VERSION),
     ]
 
     //Testing
@@ -61,7 +76,9 @@ ext{
     modules = [
             rxmvp : project(':rxmvp'),
             retrofitextensions : project(':retrofitextensions'),
-            spextensions : project(':spextensions')
+            spextensions : project(':spextensions'),
+            recyclerextensions : project(':recyclerextensions'),
+            permissions : project(':permissions')
     ]
 }
 
