ANDCOMEX-11 se cambia Class<T> por Type, se actualiza documentación

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".presentation.ui.activity.MainActivity"></activity>
+        <activity android:name=".presentation.ui.activity.MainActivity">
+
+        </activity>
         <activity android:name=".presentation.ui.activity.ListUsersActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,10 +29,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".presentation.ui.activity.DetailUserActivity" />
-        <activity
-            android:name=".presentation.ui.activity.CameraActivity"
+        <activity android:name=".presentation.ui.activity.CameraActivity"
             android:label="@string/title_activity_camera"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
