--- a/recyclerextensions/build.gradle
+++ b/recyclerextensions/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.library'
 
+group='com.github.androidmx'
+
 android {
     compileSdkVersion parent.ext.COMPILE_SDK_VERSION
 
