--- a/rxextensions/build.gradle
+++ b/rxextensions/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'java-library'
 
+group='com.github.androidmx'
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
