--- a/rxextensions/build.gradle
+++ b/rxextensions/build.gradle
@@ -1,6 +1,11 @@
 apply plugin: 'java-library'
+apply plugin: 'maven'
 
 group='com.github.androidmx'
+
+repositories {
+    mavenCentral()
+}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
