--- a/rxextensions/build.gradle
+++ b/rxextensions/build.gradle
@@ -1,7 +1,11 @@
 apply plugin: 'java-library'
 apply plugin: 'maven'
 
-group='com.github.androidmx'
+group = parent.ext.GROUP
+version = parent.ext.VERSION
+
+sourceCompatibility = "1.7"
+targetCompatibility = "1.7"
 
 repositories {
     mavenCentral()
@@ -13,5 +17,12 @@ dependencies {
     implementation parent.ext.libraries.rxjava
 }
 
-sourceCompatibility = "1.7"
-targetCompatibility = "1.7"
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives sourcesJar
+}
+
