--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,6 @@ dependencies {
     implementation parent.ext.modules.spextensions
     implementation parent.ext.modules.recyclerextensions
     implementation parent.ext.modules.permissions
+    provided 'com.google.auto.value:auto-value:1.2'
+    annotationProcessor 'com.google.auto.value:auto-value:1.2'
 }
