--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,10 @@ dependencies {
     implementation parent.ext.modules.spextensions
     implementation parent.ext.modules.recyclerextensions
     implementation parent.ext.modules.permissions
-    provided 'com.google.auto.value:auto-value:1.2'
-    annotationProcessor 'com.google.auto.value:auto-value:1.2'
+
+
+    annotationProcessor 'com.google.auto.value:auto-value:1.4'
+    annotationProcessor 'com.ryanharter.auto.value:auto-value-parcel:0.2.5'
+    provided 'com.jakewharton.auto.value:auto-value-annotations:1.4'
+
 }
